--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<p class="header-subtitle">Верстка на HTML/CSS <br>
 					Разработка сайтов под ключ</p>
 					<div class="header-button-block">
-						<button class="header-button"><a href="#" class="header-button-link">Связаться</a></button>
+						<a href="https://vk.com" class="header-button">Связаться</a>
 						<small>*Это бесплатно</small>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Напишите мне:</p>
-						<button class="footer-button"><a href="#" class="footer-button-link">Написать</a></button>
+						<a href="https://vk.com" class="footer-button">Написать</a></button>
 					</div>
 				</div>
 			</div>
